[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Background/sBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/Background/sBackgroundOverlay.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/SwordTimer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Characters/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/GameProcess.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/Sometimes.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/UI/sPlayerBarEmpty.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/sPlayerBarFill.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/sPlayerBarStroke.png" type="Texture" id=9]
[ext_resource path="res://Scenes/UI/DashTimer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UI/UpgradeMenu.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 1466, 250 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1466, 250 )

[sub_resource type="DynamicFont" id=8]
size = 45
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="SBackground" type="Sprite" parent="."]
position = Vector2( 576, 324 )
scale = Vector2( 1.125, 1.08 )
z_index = -1
texture = ExtResource( 1 )

[node name="SBackgroundOverlay" type="Sprite" parent="."]
position = Vector2( 576, 324 )
scale = Vector2( 1.125, 1.08 )
z_index = 100
z_as_relative = false
texture = ExtResource( 2 )

[node name="UserInterface" type="Control" parent="SBackgroundOverlay"]
margin_top = -276.852
margin_right = 40.0
margin_bottom = -236.852
theme = SubResource( 5 )

[node name="Label" type="Label" parent="SBackgroundOverlay/UserInterface"]
margin_left = -19.0
margin_top = -5.0
margin_right = 21.0
margin_bottom = 44.0
text = "0"
align = 1
valign = 1
uppercase = true

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 576, 324 )

[node name="EnemySpawner" type="Node2D" parent="."]

[node name="TopLeft" type="Position2D" parent="EnemySpawner"]
position = Vector2( -65, -74 )

[node name="TopLeftCenter" type="Position2D" parent="EnemySpawner"]
position = Vector2( 359, -74 )

[node name="TopRightCenter" type="Position2D" parent="EnemySpawner"]
position = Vector2( 735, -74 )

[node name="TopRight" type="Position2D" parent="EnemySpawner"]
position = Vector2( 1223, -74 )

[node name="CenterRight" type="Position2D" parent="EnemySpawner"]
position = Vector2( 1223, 302 )

[node name="BottomRight" type="Position2D" parent="EnemySpawner"]
position = Vector2( 1223, 718 )

[node name="BottomRightCenter" type="Position2D" parent="EnemySpawner"]
position = Vector2( 759, 718 )

[node name="BottomLeftCenter" type="Position2D" parent="EnemySpawner"]
position = Vector2( 359, 718 )

[node name="BottomLeft" type="Position2D" parent="EnemySpawner"]
position = Vector2( -73, 718 )

[node name="CenterLeft" type="Position2D" parent="EnemySpawner"]
position = Vector2( -73, 326 )

[node name="Life" type="Node2D" parent="."]
z_index = 150

[node name="HpBar" type="ProgressBar" parent="Life"]
margin_left = 20.0
margin_top = 12.0
margin_right = 389.0
margin_bottom = 76.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 3.0
step = 1.0
percent_visible = false

[node name="Sprite" type="Sprite" parent="Life"]
position = Vector2( 202, 45 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Life"]
margin_left = 182.0
margin_top = 23.0
margin_right = 222.0
margin_bottom = 72.0
theme = SubResource( 9 )
text = "0"
align = 1
valign = 1

[node name="DashTimer" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 45, 105 )

[node name="SwordTimer" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 45, 105 )

[node name="UpgradeMenu" parent="." instance=ExtResource( 11 )]
position = Vector2( 172, 623 )
scale = Vector2( 0.15, 0.15 )
z_index = 150
